gatekeeper/constraints/k8shostnetwork-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHostNetwork
metadata:
  name: block-host-network
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - demo
