gatekeeper/constraints/k8smaxreplicas-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: limit-max-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
      - apiGroups: ["argoproj.io"]
        kinds: ["Rollout"]
    namespaces:
      - demo
      - payments
  parameters:
    max: 5
